issue143 Aligned menu items to the left

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -81,5 +81,6 @@
     }
     ul.menu {
         @apply list-none;  /* or directly use: list-style-type: none; */
+        @apply ml-0;
     }
 }
